Исправления кода для создания документации

--- a/latex/md_final_test_report.tex
+++ b/latex/md_final_test_report.tex
@@ -34,6 +34,6 @@
 5   &5   &0   &100\%   \\\cline{1-4}
 \end{longtabu}
 \hypertarget{md_final_test_report_autotoc_md4}{}\doxysection{Заключение}\label{md_final_test_report_autotoc_md4}
-✅ {\bfseries{ВСЕ ТЕСТЫ УСПЕШНО ПРОЙДЕНЫ!}}
+\mbox{[}PASS\mbox{]} {\bfseries{ВСЕ ТЕСТЫ УСПЕШНО ПРОЙДЕНЫ!}}
 
 Сервер соответствует функциональным требованиям и готов к использованию. 
