--- a/latex/files.tex
+++ b/latex/files.tex
@@ -3,5 +3,5 @@
 \item\contentsline{section}{\mbox{\hyperlink{main_8cpp}{main.\+cpp}} \\*Точка входа серверного приложения }{\pageref{main_8cpp}}{}
 \item\contentsline{section}{\mbox{\hyperlink{server_8cpp}{server.\+cpp}} \\*Реализация методов класса \mbox{\hyperlink{classServer}{Server}} для обработки клиентских подключений }{\pageref{server_8cpp}}{}
 \item\contentsline{section}{\mbox{\hyperlink{server_8h}{server.\+h}} \\*Заголовочный файл класса \mbox{\hyperlink{classServer}{Server}} }{\pageref{server_8h}}{}
-\item\contentsline{section}{\mbox{\hyperlink{test_8cpp}{test.\+cpp}} \\*Модульные тесты для серверного приложения }{\pageref{test_8cpp}}{}
+\item\contentsline{section}{\mbox{\hyperlink{test_8cpp}{test.\+cpp}} }{\pageref{test_8cpp}}{}
 \end{DoxyCompactList}
