--- a/latex/test_8cpp.tex
+++ b/latex/test_8cpp.tex
@@ -1,10 +1,5 @@
 \hypertarget{test_8cpp}{}\doxysection{Файл test.\+cpp}
 \label{test_8cpp}\index{test.cpp@{test.cpp}}
-
-
-Модульные тесты для серверного приложения.  
-
-
 {\ttfamily \#include $<$Unit\+Test++/\+Unit\+Test++.\+h$>$}\newline
 {\ttfamily \#include $<$fstream$>$}\newline
 {\ttfamily \#include $<$cstdio$>$}\newline
@@ -45,19 +40,8 @@ void \mbox{\hyperlink{test_8cpp_a211fb797c17af335a4c37676395a045d}{delete\+Temp\
 \mbox{\hyperlink{test_8cpp_a4821082e4e457757bd9c82fdb4f2efd3}{SUITE}} (Auth\+Integration\+Test)
 \item 
 int \mbox{\hyperlink{test_8cpp_ae66f6b31b5ad750f1fe042a706a4e3d4}{main}} ()
-\begin{DoxyCompactList}\small\item\em Основная функция модульных тестов. \end{DoxyCompactList}\end{DoxyCompactItemize}
+\end{DoxyCompactItemize}
 
-
-\doxysubsection{Подробное описание}
-Модульные тесты для серверного приложения. 
-
-\begin{DoxyAuthor}{Автор}
-Чернышев Ринат Рустямович 
-\end{DoxyAuthor}
-\begin{DoxyDate}{Дата}
-26.\+12.\+2025
-\end{DoxyDate}
-Содержит тесты для проверки корректности работы методов класса \mbox{\hyperlink{classServer}{Server}}, включая аутентификацию SHA-\/224, вычисление суммы квадратов и загрузку БД. 
 
 \doxysubsection{Функции}
 \mbox{\Hypertarget{test_8cpp_ac24304cc678defb2af0e1ae407132190}\label{test_8cpp_ac24304cc678defb2af0e1ae407132190}} 
@@ -78,13 +62,6 @@ int \mbox{\hyperlink{test_8cpp_ae66f6b31b5ad750f1fe042a706a4e3d4}{main}} ()
 \doxysubsubsection{\texorpdfstring{main()}{main()}}
 {\footnotesize\ttfamily int main (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})}
 
-
-
-Основная функция модульных тестов. 
-
-\begin{DoxyReturn}{Возвращает}
-Код завершения тестов. 
-\end{DoxyReturn}
 \mbox{\Hypertarget{test_8cpp_a4821082e4e457757bd9c82fdb4f2efd3}\label{test_8cpp_a4821082e4e457757bd9c82fdb4f2efd3}} 
 \index{test.cpp@{test.cpp}!SUITE@{SUITE}}
 \index{SUITE@{SUITE}!test.cpp@{test.cpp}}
